# space-traders

./: README.md  docker-compose.yml  openapi-ts.config.ts  package.json  pnpm-lock.yaml
apps/st-next/: next.config.mjs  package.json
apps/st-next/src/app/: layout.tsx
apps/st-next/src/components/: providers.tsx
apps/st-spa/: .eslintrc.cjs  package.json  tailwind.config.ts  vite.config.ts
apps/st-spa/src/: main.tsx
apps/st-spa/src/app/: contracts.tsx  dashboard.tsx  error-page.tsx  home.tsx  layout.tsx  register.tsx  routes.tsx  status.tsx
apps/st-spa/src/app/ships/: list.tsx  (+1 more)
apps/st-spa/src/components/: fleet.tsx  mobile-nav.tsx  mode-toggle.tsx  nav.tsx  providers.tsx  register-agent.tsx  system-waypoints.tsx
apps/st-spa/src/lib/: env.ts  queries.ts  st-client-enums.ts
apps/st-web/: package.json
apps/st-web/src/app/: globals.css  layout.tsx  page.tsx
apps/st-web/src/components/: active-agent.tsx  contracts.tsx  fleet-table.tsx  fleet.tsx  logout.tsx  my-ships.tsx  nav.tsx  providers.tsx  shipyard.tsx  system-waypoints.tsx  waypoint-display.tsx  waypoint.tsx
apps/st-web/src/lib/: constants.ts  queries.ts  st-client.ts
docs/: mutations.md  scratch.sql  systems.json  todo.md
docs/agents/: sabre-1.json
pkgs/db/: client.ts  custom-cols.ts  drizzle.config.ts  package.json  schema.ts
pkgs/st-ts-client/: package.json  services.gen.ts  types.gen.ts
pkgs/st-ts-client/core/: OpenAPI.ts
scratch/: api-types.ts
scratch/st-py/: config.py  constants.py  db.py  domain.py  main.py  nb.ipynb  pyproject.toml  scrape.py  system-waypoint-res.json  utils.py
(+43 files in other folders)
